--- a/sass/globals/_boilerplate.scss
+++ b/sass/globals/_boilerplate.scss
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     line-height: 1.5;
     font-family: u.$primary-font;
+    -webkit-tap-highlight-color: transparent;
 }
 
 ul {
