--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -2,6 +2,10 @@
 
 .nav {
     height: 60px;
+    width: 100%;
+    position: fixed;
+    border-bottom: 1px solid black;
+    background-color: white;
     
     @include u.flexbox(center);
 
