--- a/sass/pages/_navbar.scss
+++ b/sass/pages/_navbar.scss
@@ -16,7 +16,7 @@
             @include u.flexbox(center);
     
             .link-icon {
-                font-size: 20px;
+                font-size: 1.4rem;
             }
 
             .link-icon::after {
