--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,7 +1,7 @@
 @use '../utils' as u;
 
 .hero {
-    padding: 0 20px;
+    padding-top: 50px;
     flex-direction: column;
     @include u.flexbox(center)
 }
