--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -6,6 +6,7 @@
     position: fixed;
     border-bottom: 1px solid black;
     background-color: white;
+    z-index: 1;
     
     @include u.flexbox(center);
 
