--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -1,19 +1,20 @@
-@use '../utils' as u;
+@use '../globals';
+@use '../utils';
 
 .nav {
     height: 60px;
     width: 100%;
     position: fixed;
-    border-bottom: 1px solid black;
-    background-color: white;
+    border-bottom: 1px solid globals.$text;
+    background-color: globals.$background;
     z-index: 1;
     
-    @include u.flexbox(center);
+    @include utils.flexbox(center);
 
     &__mobile {
         max-width: 100%;
         padding: 0 20px;
-        @include u.breakpoint(small) {
+        @include utils.breakpoint(small) {
             display: none;
         }
     }
@@ -21,7 +22,7 @@
     &__desktop {
         display: none;
 
-        @include u.breakpoint(small) {
+        @include utils.breakpoint(small) {
             display: block;
         }
     }
