--- a/sass/pages/_hero.scss
+++ b/sass/pages/_hero.scss
@@ -1,5 +1,5 @@
-@use '../utils' as u;
-@use '../globals/'as g;
+@use '../globals';
+@use '../utils';
 
 .hero {
     &__image {
@@ -7,7 +7,7 @@
         div {
             position: relative;
 
-            @include u.flexbox(center);
+            @include utils.flexbox(center);
 
             .image-container {
                 width: 15em;
@@ -17,7 +17,7 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
-                    border: 2px solid g.$primary-color;
+                    border: 2px solid globals.$primary-color;
                     border-radius: 100%;
                     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px 0px;
                 }
@@ -29,12 +29,12 @@
                 left: 25px;
                 bottom: 0;
                 background-color: #D9D9D9;
-                border: 2px solid g.$primary-color;
+                border: 2px solid globals.$primary-color;
                 border-radius: 100%;
                 box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px 0px;
                 cursor: pointer;
 
-                @include u.flexbox(center);
+                @include utils.flexbox(center);
 
                 img {
                     width: 100%;
@@ -56,32 +56,32 @@
         h1 {
             font-size: 30px;
             font-weight: 700;
-            color: g.$secondary-color;
-            font-family: u.$secondary-font;
+            color: globals.$secondary-color;
+            font-family: utils.$secondary-font;
         }
 
         h2 {
             font-size: 20px;
             font-weight: normal;
-            font-family: u.$secondary-font;
+            font-family: utils.$secondary-font;
         }
 
         p {
-            font-family: u.$secondary-font;
+            font-family: utils.$secondary-font;
         }
 
         .social-icon {
             margin-top: 12px;
             padding-top: 8px;
-            border-top: 3px solid g.$secondary-color;
+            border-top: 3px solid globals.$secondary-color;
 
-            @include u.flexbox(center);
+            @include utils.flexbox(center);
 
             a {
                 font-size: 2rem;
                 margin: 0 12px;
 
-                @include u.flexbox(center)
+                @include utils.flexbox(center)
             }
         }
     }
