--- a/sass/pages/_navbar.scss
+++ b/sass/pages/_navbar.scss
@@ -1,10 +1,10 @@
-@use '../globals' as g;
-@use '../utils' as u;
+@use '../globals';
+@use '../utils';
 
 .nav__mobile {
     width: 100%;
     
-    @include u.flexbox(space-evenly);
+    @include utils.flexbox(space-evenly);
 
     .nav-link {
         a {
@@ -13,7 +13,7 @@
             padding: 0 10px;
             transition: 0.3s;
 
-            @include u.flexbox(center);
+            @include utils.flexbox(center);
     
             .link-icon {
                 font-size: 1.4rem;
@@ -26,13 +26,13 @@
                 position: absolute;
                 left: 0;
                 bottom: -3px;
-                background-color: g.$secondary-color;
+                background-color: globals.$secondary-color;
                 transition: 0.3s;
             }
         }
 
         a:hover {
-            color: g.$secondary-color;
+            color: globals.$secondary-color;
 
             .link-icon::after {
                 width: 100%;
