--- a/sass/utils/_breakpoints.scss
+++ b/sass/utils/_breakpoints.scss
@@ -1,6 +1,7 @@
-// 480, 767px, 1024px, 1280px
+// 375px, 480, 767px, 1024px, 1280px
 
 $breakpoints-up: (
+    "xsmall": 23.43em,
     "small": 30em,
     "medium": 47.94em,
     "large": 64em,
