--- a/sass/globals/_boilerplate.scss
+++ b/sass/globals/_boilerplate.scss
@@ -31,8 +31,28 @@ section {
     padding-top: 100px;
 }
 
-.container__info {
-    border: 3px solid colors.$primary-color;
-    border-radius: 16px;
-    padding: 16px;
-}
+.container {
+        width: 100%;
+
+        h2 {
+            width: 150px;
+            margin-left: 16px;
+            font-weight: bold;
+            font-family: utils.$secondary-font;
+        }
+
+        .border {
+            width: 150px;
+            height: 1.5em;
+            margin-left: 16px;
+            border-top: 3px solid colors.$primary-color;
+            border-right: 3px solid colors.$primary-color;
+            border-top-right-radius: 16px;
+        }
+
+        .container__info {
+            border: 3px solid colors.$primary-color;
+            border-radius: 16px;
+            padding: 16px;
+        }
+    }
