--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -9,6 +9,7 @@
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             gap: 10px;
+            margin-top: 16px;
 
             @include utils.breakpoint(xsmall) {
                 grid-template-columns: repeat(4, 1fr);
