--- a/sass/globals/_typography.scss
+++ b/sass/globals/_typography.scss
@@ -1,4 +1,5 @@
 @use './colors';
+@use '../utils';
 
 h1,
 h2,
@@ -8,9 +9,18 @@ h3 {
     color: colors.$text;
 }
 
+h1 {
+    font-size: clamp(1.75rem, 1rem + 2vw, 3rem);
+}
+
+h2 {
+    font-size: clamp(1.375rem, 0.875rem + 1.5vw, 1.875rem);
+}
+
 p {
     margin-top: 0;
     color: colors.$text;
+    font-size: 1rem;
 }
 
 a, 
