--- a/sass/pages/_hero.scss
+++ b/sass/pages/_hero.scss
@@ -19,8 +19,8 @@
                 height: 15em;
 
                 @include utils.breakpoint(medium) {
-                    width: 16em;
-                    height: 16em;
+                    width: 18em;
+                    height: 18em;
                 }
 
                 .main-image {
@@ -45,7 +45,7 @@
                     @include utils.flexbox(center);
 
                     @include utils.breakpoint(medium) {
-                        width: 6em;
+                        width: 5em;
                     }
     
                     img {
@@ -57,6 +57,7 @@
         }
 
         p {
+            font-size: 1.2rem;
             margin: 12px 0 9px;
             text-align: center;
             font-family: 'VT323', monospace;
@@ -71,18 +72,12 @@
         }
 
         h1 {
-            font-size: 30px;
             font-weight: 700;
             color: globals.$secondary-color;
             font-family: utils.$secondary-font;
-
-            // @include utils.breakpoint(medium) {
-            //     margin-left: 32px;
-            // }
         }
 
         h2 {
-            font-size: 20px;
             font-weight: normal;
             font-family: utils.$secondary-font;
         }
