--- a/sass/pages/_projects.scss
+++ b/sass/pages/_projects.scss
@@ -3,56 +3,62 @@
 .projects {
 
     .container__info {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        gap: 30px;
 
-        .card {
+        .card__container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 30px;
+            margin: 16px 0;
+            margin-top: 24px;
 
-            img {
-                width: 100%;
-            }
+            .card {
 
-            &__info {
-                display: flex;
-                flex-direction: column;
-                display: grid;  
-                gap: 8px;
-
-                h3 {
-                    color: globals.$secondary-color;
+                img {
+                    width: 100%;
                 }
-
-                .description {
-                    font-size: 14px;
-                }
-
-                .tags {
-                    color: globals.$primary-color;
-                }
-
-                .links {
-                    margin-top: 8px;
-                    display: grid;
+    
+                &__info {
+                    display: flex;
                     flex-direction: column;
-                    gap: 6px;
-
-                    a {
-                        font-weight: bold;
+                    display: grid;  
+                    gap: 8px;
+    
+                    h3 {
                         color: globals.$secondary-color;
-                        cursor: pointer;
-
-                        i {
-                            transition: 0.4s;
-                            font-size: 12px;
-                            margin-left: 4px;
-                        }
                     }
-
-                    a:hover {
-                        i {
-                            margin-left: 8px;
+    
+                    .description {
+                        font-size: 1rem;
+                    }
+    
+                    .tags {
+                        color: globals.$primary-color;
+                        font-size: 1.1rem;
+                    }
+    
+                    .links {
+                        margin-top: 8px;
+                        display: grid;
+                        flex-direction: column;
+                        gap: 6px;
+    
+                        a {
+                            font-weight: bold;
+                            color: globals.$secondary-color;
+                            cursor: pointer;
+    
+                            i {
+                                transition: 0.4s;
+                                font-size: 0.9rem;
+                                margin-left: 4px;
+                            }
+                        }
+    
+                        a:hover {
+                            i {
+                                margin-left: 8px;
+                            }
                         }
                     }
                 }
