--- a/sass/pages/_projects.scss
+++ b/sass/pages/_projects.scss
@@ -1,4 +1,5 @@
 @use '../globals';
+@use '../utils';
 
 .projects {
 
@@ -6,11 +7,16 @@
 
         .card__container {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(2, 1fr);
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(1, 1fr);
             gap: 30px;
             margin: 16px 0;
             margin-top: 24px;
+
+            @include utils.breakpoint(medium) {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(2, 1fr);
+            }
 
             .card {
 
