--- a/sass/pages/_footer.scss
+++ b/sass/pages/_footer.scss
@@ -3,7 +3,7 @@
 
 footer {
     font-weight: bold;
-    border-top: 1px solid black;
+    border-top: 1px solid globals.$text;
 
     h2 {
         width: 200px;
