--- a/sass/pages/_themes.scss
+++ b/sass/pages/_themes.scss
@@ -1,3 +1,4 @@
+@use '../globals';
 @use '../utils';
 
 .theme {
@@ -14,9 +15,9 @@
             width: 40px;
             height: 40px;
             border-radius: 100%;
-            border: 2px solid black;
+            border: 2px solid globals.$primary-color;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px 0px;
-            opacity: 0.5;
+            opacity: 0.7;
             cursor: pointer;
         }
 
